--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 .vs/Tron/FileContentIndex/548af20e-2c8f-46b9-b88a-87b95adc2f0e.vsidx
+.vs/Tron/FileContentIndex/98f1dd16-59ae-454d-9d07-b27e9416214b.vsidx
